--- a/source/package/components/com_xiveirm/staging/administrator/models/forms/contact.xml
+++ b/source/package/components/com_xiveirm/staging/administrator/models/forms/contact.xml
@@ -1,245 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
 	<fieldset>
-		<field name="id" type="text"
-			default="0"
+		<field name="id" type="text" class="readonly" readonly="true"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ID"
-			readonly="true" class="readonly"
 			description="JGLOBAL_FIELD_ID_DESC"
-		/>
+			default="0" />
 
-		<field name="client_id" type="text"
-			size="40"
-			class="inputbox"
+		<field name="client_id" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CLIENT_ID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CLIENT_ID"
 			default="0"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
 		<field name="parent_id" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_PARENT_ID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_PARENT_ID"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
 		<field name="created" type="timecreated"
-			default=""
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CREATED"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CREATED"
-			hidden="true"
-		/>
+			default=""
+			hidden="true" />
 
 		<field name="created_by" type="createdby"
-			default=""
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CREATED_BY"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CREATED_BY"
-		/>
+			default="" />
 
 		<field name="modified" type="timeupdated"
-			default=""
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_MODIFIED"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_MODIFIED"
-			hidden="true"
-		/>
+			default=""
+			hidden="true" />
 
 		<field name="catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
 			extension="com_xiveirm.contacts.catid"
-			filter="raw"
-		/>
+			filter="raw" />
 
 		<field name="filter_catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
 			extension="com_xiveirm.contacts.catid"
 			show_root="1"
-			onchange="this.form.submit();"
-		/>
+			onchange="this.form.submit();" />
 
 		<field name="customer_id" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CUSTOMER_ID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CUSTOMER_ID"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="company" type="text"
-			size="40"
-			class="inputbox"
+		<field name="company" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_COMPANY"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_COMPANY"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="title" type="text"
-			size="40"
-			class="inputbox"
+		<field name="title" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_TITLE"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_TITLE"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="last_name" type="text"
-			size="40"
-			class="inputbox"
+		<field name="last_name" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_LAST_NAME"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_LAST_NAME"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="first_name" type="text"
-			size="40"
-			class="inputbox"
+		<field name="first_name" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_FIRST_NAME"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_FIRST_NAME"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="gender" type="sql"
-			class="inputbox"
+		<field name="gender" type="sql" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_GENDER"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_GENDER"
 			query="SELECT 0 AS `opt_value`, '- Select Gender -' AS `opt_name` UNION SELECT `opt_value`, `opt_name` FROM `#__xiveirm_options`"
 			key_field="opt_value"
-			value_field="opt_name"
-		/>
+			value_field="opt_name" />
 
-		<field name="dob" type="calendar"
-			class="inputbox"
+		<field name="dob" type="calendar" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_DOB"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_DOB"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_name" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_name" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_NAME"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_NAME"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_name_add" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_name_add" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_NAME_ADD"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_NAME_ADD"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_street" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_street" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_STREET"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_STREET"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_houseno" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_houseno" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_HOUSENO"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_HOUSENO"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_zip" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_zip" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_ZIP"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_ZIP"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_city" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_city" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_CITY"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_CITY"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_region" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_region" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_REGION"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_REGION"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="address_country" type="text"
-			size="40"
-			class="inputbox"
+		<field name="address_country" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_COUNTRY"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_COUNTRY"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="phone" type="text"
-			size="40"
-			class="inputbox"
+		<field name="phone" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_PHONE"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_PHONE"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="fax" type="text"
-			size="40"
-			class="inputbox"
+		<field name="fax" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_FAX"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_FAX"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="mobile" type="text"
-			size="40"
-			class="inputbox"
+		<field name="mobile" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_MOBILE"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_MOBILE"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="email" type="text"
-			size="40"
-			class="inputbox"
+		<field name="email" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_EMAIL"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_EMAIL"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="web" type="text"
-			size="40"
-			class="inputbox"
+		<field name="web" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_WEB"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_WEB"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="remarks" type="text"
-			size="40"
-			class="inputbox"
+		<field name="remarks" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_REMARKS"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_REMARKS"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="state" type="list"
+		<field name="state" type="list" size="1" class="inputbox"
 			label="JSTATUS"
 			description="JFIELD_PUBLISHED_DESC"
-			class="inputbox"
-			size="1"
 			default="1">
 				<option value="1">JPUBLISHED</option>
 				<option value="0">JUNPUBLISHED</option>
 		</field>
 
 		<field name="checked_out" type="hidden"
-			filter="unset"
-		/>
+			filter="unset" />
 
 		<field name="checked_out_time" type="hidden"
-			filter="unset"
-		/>
+			filter="unset" />
 	</fieldset>
 </form>
