--- a/source/package/components/com_xiveirm/staging/site/models/forms/contact.xml
+++ b/source/package/components/com_xiveirm/staging/site/models/forms/contact.xml
@@ -1,165 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
 	<fieldset>
-		<field name="id" type="text" default="0" label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ID"
-			readonly="true" class="readonly"
-			description="JGLOBAL_FIELD_ID_DESC" />
+		<field name="id" type="text" class="readonly" readonly="true"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ID"
+			description="JGLOBAL_FIELD_ID_DESC"
+			default="0" />
 
-		<field name="created" type="timecreated" default=""
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CREATED"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CREATED"  hidden="true" />
+		<field name="client_id" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CLIENT_ID"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CLIENT_ID"
+			default="0"
+			filter="safehtml" />
 
-		<field name="created_by" type="createdby" default=""
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CREATED_BY"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CREATED_BY"  />
+		<field name="parent_id" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_PARENT_ID"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_PARENT_ID"
+			filter="safehtml" />
 
-		<field name="modified" type="timeupdated" default=""
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_MODIFIED"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_MODIFIED"  hidden="true" />
+		<field name="created" type="timecreated"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CREATED"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CREATED"
+			default=""
+			hidden="true" />
 
-		<field name="access_id" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ACCESS_ID"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ACCESS_ID"
-			filter="string"
-			maxlength="50" />
+		<field name="created_by" type="createdby"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CREATED_BY"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CREATED_BY"
+			default="" />
 
-		<field name="client_id" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CLIENT_ID"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CLIENT_ID"
-			filter="string"
-			maxlength="50" />
+		<field name="modified" type="timeupdated"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_MODIFIED"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_MODIFIED"
+			default=""
+			hidden="true" />
 
-		<field name="customer_id" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CUSTOMER_ID"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CUSTOMER_ID"
-			filter="string"
-			maxlength="25" />
+		<field name="catid" type="category"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
+			extension="com_xiveirm.catid"
+			filter="raw" />
 
-		<field name="company_name" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_COMPANY_NAME"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_COMPANY_NAME"
-			filter="string"
-			maxlength="150" />
+		<field name="filter_catid" type="category"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
+			extension="com_xiveirm.catid"
+			show_root="1"
+			onchange="this.form.submit();" />
+
+		<field name="customer_id" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CUSTOMER_ID"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CUSTOMER_ID"
+			filter="safehtml" />
+
+		<field name="company" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_COMPANY"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_COMPANY"
+			filter="safehtml" />
 
 		<field name="title" type="text" size="40" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_TITLE"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_TITLE"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_TITLE"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_TITLE"
 			filter="safehtml" />
 
-		<field name="last_name" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_LAST_NAME"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_LAST_NAME"
-			filter="string"
-			maxlength="150" />
+		<field name="last_name" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_LAST_NAME"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_LAST_NAME"
+			filter="safehtml" />
 
-		<field name="first_name" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_FIRST_NAME"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_FIRST_NAME"
-			filter="string"
-			maxlength="150" />
+		<field name="first_name" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_FIRST_NAME"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_FIRST_NAME"
+			filter="safehtml" />
 
-		<field name="gender" type="list"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_GENDER"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_GENDER"
-			filter="raw"
-			multiple="false">
-				<option value="u">Unknown</option>
-				<option value="f">Female</option>
-				<option value="m">Male</option>
-				<option value="c">Company</option>
-		</field>
+		<field name="gender" type="sql" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_GENDER"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_GENDER"
+			query="SELECT 0 AS `opt_value`, '- Select Gender -' AS `opt_name` UNION SELECT `opt_value`, `opt_name` FROM `#__xiveirm_options`"
+			key_field="opt_value"
+			value_field="opt_name" />
 
 		<field name="dob" type="calendar" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_DOB"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_DOB"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_DOB"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_DOB"
 			filter="safehtml" />
 
-		<field name="address_name" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_NAME"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_NAME"
-			filter="string"
-			maxlength="150" />
+		<field name="address_name" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_NAME"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_NAME"
+			filter="safehtml" />
 
-		<field name="address_name_add" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_NAME_ADD"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_NAME_ADD"
-			filter="string"
-			maxlength="100" />
+		<field name="address_name_add" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_NAME_ADD"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_NAME_ADD"
+			filter="safehtml" />
 
-		<field name="address_street" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_STREET"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_STREET"
-			filter="string"
-			maxlength="100" />
+		<field name="address_street" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_STREET"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_STREET"
+			filter="safehtml" />
 
-		<field name="address_houseno" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_HOUSENO"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_HOUSENO"
-			filter="string"
-			maxlength="10" />
+		<field name="address_houseno" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_HOUSENO"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_HOUSENO"
+			filter="safehtml" />
 
-		<field name="address_zip" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_ZIP"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_ZIP"
-			filter="string"
-			maxlength="10" />
+		<field name="address_zip" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_ZIP"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_ZIP"
+			filter="safehtml" />
 
-		<field name="address_city" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_CITY"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_CITY"
-			filter="string"
-			maxlength="100" />
+		<field name="address_city" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_CITY"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_CITY"
+			filter="safehtml" />
+
+		<field name="address_region" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_REGION"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_REGION"
+			filter="safehtml" />
 
 		<field name="address_country" type="text" size="40" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_COUNTRY"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_COUNTRY"
-			required="true"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_COUNTRY"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_COUNTRY"
 			filter="safehtml" />
 
-		<field name="phone" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_PHONE"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_PHONE"
-			filter="string"
-			maxlength="25" />
-
-		<field name="fax" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_FAX"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_FAX"
-			filter="string"
-			maxlength="25" />
-
-		<field name="mobile" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_MOBILE"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_MOBILE"
-			filter="string"
-			maxlength="25" />
-
-		<field name="email" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_EMAIL"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_EMAIL"
-			filter="safehtml"
-			maxlength="100" />
-
-		<field name="web" type="text"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_WEB"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_WEB"
-			filter="url"
-			maxlength="150" />
-
-		<field name="remarks" type="textarea"
-			label="COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_REMARKS"
-			description="COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_REMARKS"
-			cols="100"
-			rows="8"
+		<field name="phone" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_PHONE"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_PHONE"
 			filter="safehtml" />
 
-		<field
-			name="state"
-			type="list"
+		<field name="fax" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_FAX"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_FAX"
+			filter="safehtml" />
+
+		<field name="mobile" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_MOBILE"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_MOBILE"
+			filter="safehtml" />
+
+		<field name="email" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_EMAIL"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_EMAIL"
+			filter="safehtml" />
+
+		<field name="web" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_WEB"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_WEB"
+			filter="safehtml" />
+
+		<field name="remarks" type="text" size="40" class="inputbox"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_REMARKS"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_REMARKS"
+			filter="safehtml" />
+
+		<field name="state" type="list" size="1" class="inputbox"
 			label="JSTATUS"
 			description="JFIELD_PUBLISHED_DESC"
-			class="inputbox"
-			size="1"
 			default="1">
 				<option value="1">JPUBLISHED</option>
 				<option value="0">JUNPUBLISHED</option>
@@ -170,5 +167,5 @@
 
 		<field name="checked_out_time" type="hidden"
 			filter="unset" />
-	</fieldset> 
+	</fieldset>
 </form>
